--- a/public/sass/paginas/contact.scss
+++ b/public/sass/paginas/contact.scss
@@ -4,6 +4,7 @@ body {
     .banner {
         display: flex;
         justify-content: center;
+
         img {
             align-items: center;
             width: 100%;
@@ -11,6 +12,7 @@ body {
             margin-bottom: 5%;
         }
     }
+
     .title {
         display: flex;
         justify-content: center;
@@ -23,6 +25,7 @@ body {
         text-shadow: 2px 2px 4px #000000;
         text-transform: uppercase;
     }
+
     .container {
         display: flex;
         justify-content: center;
@@ -39,29 +42,34 @@ body {
             color: config.get-color("white");
             border-radius: 30px 0px 0px 30px;
             border: 2px solid config.get-color("dbrown");
-            background: rgb(2,0,36);
-            background: linear-gradient(170deg, rgba(2,0,36,1) 1%, rgba(166,99,60,1) 110%);
+            background: rgb(2, 0, 36);
+            background: linear-gradient(170deg, rgba(2, 0, 36, 1) 1%, rgba(166, 99, 60, 1) 110%);
             padding: 2rem;
             width: 25%;
             height: 70vh;
             margin-top: -1rem;
+
             #Title {
                 text-transform: uppercase;
                 margin-top: -1rem;
             }
+
             #Desc {
                 margin-top: 5%;
                 font-size: 20px;
                 font-weight: lighter;
             }
+
             .info-buttons {
                 margin-top: 25%;
                 font-size: 20px;
+
                 span {
                     margin-left: 5%;
                 }
             }
         }
+
         .form-container {
             display: flex;
             flex-direction: column;
@@ -72,6 +80,7 @@ body {
             border-radius: 0px 30px 30px 0px;
             border: 2px solid config.get-color("dbrown");
             margin-top: -0.8%;
+
             .contacted {
                 display: none;
                 text-align: center;
@@ -83,10 +92,12 @@ body {
                 width: 90%;
                 font-weight: 500;
                 font-size: 19px;
-            }  
+            }
+
             label {
                 font-size: 25px;
             }
+
             input {
                 width: 80%;
                 height: 30px;
@@ -101,10 +112,12 @@ body {
                 max-width: 50%;
                 max-height: 10%;
             }
+
             input:focus {
                 outline: none;
                 border: 1.5px solid config.get-color("dbrown");
             }
+
             #content {
                 max-width: 40%;
                 max-height: 1%;
@@ -114,6 +127,7 @@ body {
                 font-size: 18px;
                 border: none;
             }
+
             #content:focus {
                 outline: none;
                 border: 1.5px solid config.get-color("dbrown");
