Menu kaart admin/bezoeker auth toegevoegd

--- a/public/scss/paginas/index.scss
+++ b/public/scss/paginas/index.scss
@@ -37,6 +37,7 @@
         z-index: 1;
         position: absolute;
         width: 70%;
+        margin-top: 8rem;
 
         a {
             text-decoration: none;
