--- a/public/scss/paginas/reserveren.scss
+++ b/public/scss/paginas/reserveren.scss
@@ -37,7 +37,9 @@ label {
 
 input[type="number"],
 input[type="date"],
-input[type="time"] {
+input[type="time"],
+input[type="text"],
+input[type="email"] {
     width: 100%;
     padding: 10px;
     margin-top: 5px;
@@ -124,18 +126,20 @@ button {
 .reserveren-banner img {
     max-width: 100%;
 }
+
 /*  hier eindigt de stijl voor de banner */
-.Reserveren-titel{
+.Reserveren-titel {
     text-align: center;
     position: relative;
     top: -22rem;
     left: 1.5rem;
     font-family: "Good Brush";
-    color:#ffffff;
+    color: #ffffff;
     font-size: 4.5rem;
     font-weight: lighter;
     text-shadow: config.get-color("black");
 }
-.Reserveren-openingstijd{
-    text-align: center; 
+
+.Reserveren-openingstijd {
+    text-align: center;
 }
