aande reservern gewerkt

--- a/public/scss/admin.scss
+++ b/public/scss/admin.scss
@@ -1,3 +1,18 @@
+@use "../scss/config/config";
+
+::after,
+::before {
+    box-sizing: border-box;
+}
+
+body {
+    font-family: Arial, sans-serif;
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    margin: 0;
+}
+
 table {
     border: 2px solid gray;
     border-collapse: collapse;
