--- a/public/scss/paginas/reserveren.scss
+++ b/public/scss/paginas/reserveren.scss
@@ -9,10 +9,11 @@
 
 body {
     font-family: Arial, sans-serif;
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
-    margin: 0;
+    // background-position: center;
+    // background-size: cover;
+    // background-repeat: no-repeat;
+    // margin: 0;
+    height: 5rem;
 }
 
 .container {
