--- a/public/scss/paginas/menukaart.scss
+++ b/public/scss/paginas/menukaart.scss
@@ -3,6 +3,7 @@
 
 body {
     width: 100%;
+
     .svg-top {
         display: flex;
         justify-content: space-between;
@@ -14,12 +15,14 @@ body {
                 margin-left: -8%;
             }
         }
+        
         .svg-right {
             svg {
                 margin-right: -5%;
             }
         }
     }
+
     .head {
         #title {
             font-size: 4.5rem;
@@ -29,6 +32,7 @@ body {
             color: config.get-color("lbrown");
             font-family: "Good Brush";
         }
+
         #menuLink {
             display: flex;
             margin-left: 5%;   
@@ -40,6 +44,7 @@ body {
             font-family: "Roboto Slab";
         }
     }
+
     .container_chefbites {
         display: flex;
         flex-direction: column;
@@ -47,28 +52,68 @@ body {
         margin-top: 5%;
         margin-left: 5%;
         font-size: 1.5rem;
+
         #title {
             text-transform: uppercase;
             font-weight: 200;
             text-shadow: 1px 1px 1px config.get-color("black");
         }
+
         #desc-eng {
             color: config.get-color("gray");
         }
+
         .table_chefbites {
             display: flex;
             justify-content: space-between;
+
             tr {
                 display: flex;
                 justify-content: space-between;
                 width: 100%;
+
                 #prijs {
                     font-weight: 700;
                     margin-left: 15rem;
                 }
             }
+
             .colored {
                 color: config.get-color("teal");
+            }
+        }
+    }
+
+    .container_Dinerkaart {
+        display: flex;
+        flex-direction: column;
+        font-family: "Roboto Slab";
+        margin-top: 10%;
+        margin-left: 5%;
+        font-size: 1.5rem;
+
+        #title {
+            text-transform: uppercase;
+            font-weight: 200;
+            text-shadow: 1px 1px 1px config.get-color("black");
+        }
+
+        #desc-eng {
+            color: config.get-color("gray");
+        }
+
+        #pcs {
+            color: config.get-color("lbrown");
+            position: absolute;
+            margin-right: 30px;
+            right: 10%;
+        }
+        .table_dinerkaart {
+
+            #sushi-name {
+                text-transform: uppercase;
+                font-weight: 200;
+                text-shadow: 1px 1px 1px config.get-color("black");
             }
         }
     }
