--- a/public/scss/admin.scss
+++ b/public/scss/admin.scss
@@ -13,7 +13,7 @@ body {
     table {
         border: 2px solid gray;
         border-collapse: collapse;
-        margin-top: 10rem;
+        // margin-top: 10rem;
         text-align: left;
         flex-direction: column;
     }
